--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/app-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bagi-raport-system</title>
+    <meta name="description" content="Sistem Bagi Raport - Manajemen antrian pengambilan raport" />
+    <title>Bagi Raport</title>
   </head>
   <body>
     <div id="root"></div>
